# deep-learning

./: pyproject.toml
Week2 Feedforward Python/: 2.1 FNN AutoDif Nanograd.ipynb
Week3 Feedforward PyTorch/: 3.1 What is pytorch.ipynb  3.2 Automatic differentiation.ipynb  3.3 FFN Half Moon.ipynb  3.4 FFN MNIST.ipynb
Week4 Convolutional/: 4.1 CNN Introduction.ipynb  4.2 CNN CIFAR-10.ipynb  4.3 CNN transfer.ipynb
Week5 Recurrent/: 5.1 Recurrent Neural Networks.ipynb
