[project]
name = "exercises"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "jupyter>=1.1.1",
    "matplotlib>=3.10.6",
    "networkx>=3.5",
    "scikit-learn>=1.7.2",
    "seaborn>=0.13.2",
    "timm>=1.0.20",
    "torch>=2.8.0",
    "torchvision>=0.23.0",
]
